[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/textures/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameFlow/DialogueScenesContent/bg_infinite_relaxed.mp3" type="AudioStream" id=2]
[ext_resource path="res://GameFlow/DialogueDisplayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/SpaceShip.png" type="Texture" id=4]
[ext_resource path="res://GameFlow/DialogueScenesContent/ship_movement_background.gd" type="Script" id=5]
[ext_resource path="res://GameFlow/Tutorials/FirstTutorial/FirstTutorialSelectPlanet.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameFlow/StoryMode/first_story_mode_scene.gd" type="Script" id=7]
[ext_resource path="res://Assets/sound/launch.wav" type="AudioStream" id=8]
[ext_resource path="res://GameFlow/command_methods_scripts/intro_dialogue.gd" type="Script" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -343, 268, 0, 0, 0, 0, 2188, 271, 3.9685, 250.809, -3.9685, -250.809, 1409, -132, 0, 0, 0, 0, 1014, -207, 0, 0, 0, 0, 932, -56, 0, 0, 0, 0, 933, 1280, 0, 0, 0, 0, -200, 571, 0, 0, 0, 0, 362, -185, 0, 0, 0, 0, 1880, 1324, 0, 0, 0, 0, 2206, 1345, 0, 0, 0, 0, 2297, 1254, 0, 0, 0, 0, 2293, 1161, 0, 0, 0, 0, 1161, -209, 0, 0, 0, 0, -336, 268 )
}

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("InFrontOfEverything/ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InFrontOfEverything/ColorRect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("InFrontOfEverything/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1.03526 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="StoryModeChapterOne" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )
on_fade_out_next_scene = ExtResource( 6 )
animation_node_path = NodePath("FadeInOut")

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Part1Background" type="Control" parent="Background"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1553.0
margin_bottom = 368.0
script = ExtResource( 5 )
ship_movement_speed = 0.03

[node name="Path2D" type="Path2D" parent="Background/Part1Background"]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Background/Part1Background/Path2D"]
position = Vector2( -141.3, 607.733 )
rotation = -2.58244
offset = 6704.28

[node name="ShipSprite" type="Sprite" parent="Background/Part1Background/Path2D/PathFollow2D"]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="BackgroundSoundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
autoplay = true
bus = "Music"

[node name="LaunchingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0

[node name="FadeInOut" type="AnimationPlayer" parent="."]
playback_speed = 0.4
anims/FadeIn = SubResource( 2 )
anims/FadeOut = SubResource( 3 )

[node name="InFrontOfEverything" type="CanvasLayer" parent="."]
layer = 10

[node name="ColorRect" type="ColorRect" parent="InFrontOfEverything"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="DialogueCanvas" type="CanvasLayer" parent="."]
layer = 10

[node name="DialogueDisplayer" parent="DialogueCanvas" instance=ExtResource( 3 )]
anchor_left = 0.125
anchor_right = 0.875
anchor_bottom = 0.886
dialogues_to_show = [ "Ship: Hello? DCC Station... Can you hear me? Copy... 
We have not found any red pandas yet...", "Station: Yes, we can barely hear you...
Just keep searching. 
We suspect there is a red panda in the next galaxy.", "Ship: There is a problem though... 
Our fuel levels are nearly depleted.
We are unable to proceed with our rescue task.", "Station: Proceed to deactivate the AI copilot.
It wastes too much energy. Just use a  Breadth First Search algorithm.", "Ship: Breadth First ... what?", "Station: I will send you the instructions. Just follow them. Ok? The red pandas need us, this is serious.", "Ship: That's why I am here... Okay, let's go!" ]
command_methods_script = ExtResource( 9 )

[connection signal="animation_finished" from="FadeInOut" to="." method="_on_FadeInOut_animation_finished"]
